[package]
name = "clawnch-protocol"
version = "0.1.0"
description = "AI agent-owned memecoin launchpad with real tokenomics on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.3.0"
solana-program = "2.0.5"
thiserror = "1.0"

[dev-dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.3.0"

[features]
cpi = ["no-log-ix-name"]
cpi = ["no-entrypoint"]
no-log-ix-name = []
